--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/NewMap.NewMap
-GameDefaultMap=/Game/Levels/NewMap.NewMap
+EditorStartupMap=/Game/Levels/MainLevel.MainLevel
+GameDefaultMap=/Game/Levels/MainLevel.MainLevel
 GlobalDefaultGameMode="/Script/BuildingEscape.BuildingEscapeGameMode"
 
 [/Script/Engine.RendererSettings]
