Added PositionReport C++ class

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FD5E69C74E73CA6C34E7CD822ECBDB17
+CopyrightNotice=Copyright Samuel Bailey 2018
 
 [StartupActions]
 bAddPacks=True
